plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.github.faedorodolfo'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

}
	//SPRINGFRAMEWORK
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.1'
	//implementation 'org.springframework.boot:spring-boot-starter-security:3.1.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//LOMBOK
	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'

	//POSTGRESQL
	runtimeOnly 'org.postgresql:postgresql:42.7.2'

	//JJWT
	//implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	//runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	//runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	//MAPSTRUCT
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	//FEINGCLIENT
	//implementation 'io.github.openfeign:feign-hc5:13.6'

	//SWAGGER
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
	implementation 'org.springdoc:springdoc-openapi-starter-common:2.8.8'

	//TESTS
	testImplementation 'org.mockito:mockito-core:5.12.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
	testImplementation 'net.bytebuddy:byte-buddy:1.14.13'
	testImplementation 'net.bytebuddy:byte-buddy-agent:1.14.13'
	testImplementation 'org.assertj:assertj-core:3.25.3'


test {
	useJUnitPlatform()

	jvmArgs = [
			"--add-opens=java.base/java.lang=ALL-UNNAMED",
			"---dd-opens=java.base/java.util=ALL-UNNAMED",
			"-XX:+EnableDynamicAgentLoading",
			"-Dnet.bytebuddy.experimental=true"
	]
}

